@@ -21,6 +21,7 @@
 	- python: add patch to rpm-4_3 to initialize RE contexts.
 	- fix: only first "mkdir -p" directory had context set.
 	- stable sort for policy specifications, patterns before paths.
+	- set "rpm_script_t" exec type for scriptlets iff /bin/sh, else default.
 
 4.2.1 -> 4.2.2:
 	- unify signal handling in librpmio, use condvar to deliver signal.
